--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rifas</title>
+    <title>LOGIN</title>
+    <link rel="stylesheet" href="index.html">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/tela.css">
 </head>
@@ -31,7 +32,7 @@
     </nav>
     <br>
  
-    <title>Sistema Gerenciador de Rifas</title>
+ 
     
     <form class="dropdown-menu p-4">
         <div class="mb-3">
