--- a/sistema.html
+++ b/sistema.html
@@ -1,71 +1,64 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema para gerenciamento de rifas</title>
-    <link rel="shortcut icon" href="img/ticket.png" type="image/x-icon">
+    <title>Sistema</title>
+    <link rel="shortcut icon" href="img/tickets.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="libs/fontawesome/css/all.css">
-    <link rel="stylesheet" href="libs/sweetAlert/dist/sweetalert2.css">
-    <link rel="stylesheet" href="libs/DataTables/datatables.css">
+    <link rel="stylesheet" href="libs/FontAwesome/css/all.css">
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <a class="navbar-brand"><img src="img/tickets.png" width="60px" alt=""></a>
+        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="my-nav" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto ">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-house"></i> Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#"><i class="fa fa-sack-dollar"></i> Vendedores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-user"></i> Compradores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="src/tipo/view/list-tipo.html"><i class="fa-solid fa-user-gear"></i> Tipo Usuarios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-percent"></i> Promoção</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-award"></i> Premio</a>
+                </li>
+            </ul>
+            <a href="" class="nav-link"><i class="fa-solid fa-right-from-bracket"></i>Sair</a>
+        </div>
+    </nav>
 
-    <body>
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow">
-            <a class="navbar-brand">
-                <img src="img/ticket.png" alt="xrifas" width="50" height="50">
-            </a>
-            <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="my-nav" class="collapse navbar-collapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link"><i class="fa-solid fa-house"></i> Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link"><i class="fa-solid fa-user"></i> Vendedores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="src/tipo/visao/list-tipo.html" class="nav-link"><i class="fa-solid fa-user-gear"></i> Tipos Usuários</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link"><i class="fa-solid fa-receipt"></i> Promoção</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link"><i class="fa-solid fa-cart-arrow-down"></i> Prêmio</a>
-                    </li>
-                </ul>
-                <a href="#" class="nav-link"><i class="fa-solid fa-right-from-bracket"></i> Sair do Sistema</a>
-            </div>
-        </nav>
-
-        <div id="content" class="container mt-5">
-            <div class="row mt-5">
-                <div class="col-12 mt-5 text-center">
-                    <h4 class="text-center text-warning">
-                        Bem vindo ao sistema de gerenciamento de rifas
-                    </h4>
-                    <img src="img/ticket.png" alt="xrifas" class="img-fluid">
-                </div>
+    <div id="content" class="container mt-5">
+        <div class="row mt-5">
+            <div class="col-12 text-center mt-5">
+                <h4 class="text-center text-warning">
+                    Bem vindo ao sistema de gerenciamento de rifas
+                </h4>
+                <img src="img/ticket.png" alt="e-rifas" class="img-fluid">
             </div>
         </div>
+    </div>
 
-        <script src="js/jquery-3.6.0.js"></script>
-        <script src="js/bootstrap.js"></script>
-        <script src="js/menu.js"></script>
-        <script src="libs/fontawesome/js/all.js"></script>
-        <script src="libs/DataTables/datatables.js"></script>
-        <script src="libs/sweetAlert/dist/sweetalert2.all.js"></script>
-
-
-    </body>
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="libs/sweetAlert/dist/sweetalert2.all.js"></script>
+    <script src="libs/DataTables/datatables.js"></script>
+    <script src="libs/FontAwesome/js/all.js"></script>
 </body>
 
 </html>
