--- a/sistema.html
+++ b/sistema.html
@@ -26,7 +26,7 @@
                     <a class="nav-link text-white" href="#"><i class="fa fa-sack-dollar"></i> Vendedores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#"><i class="fa-solid fa-user"></i> Compradores</a>
+                    <a class="nav-link text-white" href="src/comprador/visao/list-comprador.html"><i class="fa-solid fa-user"></i> Compradores</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="src/tipo/view/list-tipo.html"><i class="fa-solid fa-user-gear"></i> Tipo Usuarios</a>
